tests/poof/fixtures/errors/error6.cpp

struct foo
{
  int bar;
};

poof(
  func (foo Arg)
  {
    poof_error { this is the rror message for type ((Arg.type)) }
  }
)


